--- a/babylon-demo/index.html
+++ b/babylon-demo/index.html
@@ -6,6 +6,7 @@
     <title>Babylon demo</title>
 </head>
 <body>
-    <script type="module" src="./src/index.ts"></script>
+    <div id="app" style="width: 100%; height: 100%; position: absolute; overflow: hidden;"></div>
+    <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
