still not imported

--- a/babylon-editor/index.html
+++ b/babylon-editor/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Babylon.js Generated Template</title>
 
-    <script src="./dist/bundle.js" type="text/javascript"></script>
+    <!-- <script src="./dist/bundle.js" type="text/javascript"></script> -->
 
     <style rel="stylesheet" type="text/css">
         html,
@@ -31,9 +31,10 @@
 <body>
     <canvas id="renderCanvas"></canvas>
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         window.game = new window.game.Game();
-    </script>
+    </script> -->
+    <script type="module" src="./src/index.tsx"></script>
 </body>
 
 </html>
