--- a/svg-mesh/index.html
+++ b/svg-mesh/index.html
@@ -10,6 +10,10 @@
             width: 100%;
             margin: 0;
             padding: 0;
+            display: flex;
+        }
+        #root {
+            flex: 1;
         }
     </style>
 </head>
