--- a/three-fiber-examples/packages/starter/index.html
+++ b/three-fiber-examples/packages/starter/index.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
-    
+    <div id="root"></div>
+    <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
