--- a/mediapipe/pose/index.html
+++ b/mediapipe/pose/index.html
@@ -6,20 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pose Detection</title>
     <style>
+        .wrap {
+            position: relative;
+        }
+
         .webcam {
             width: 1280px;
             height: 720px;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
-        .output {}
+        .output {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
     </style>
 </head>
 
 <body>
     <div id="liveView">
         <button id="button">ENABLE WEBCAM</button>
-        <video id="webcam" class="webcam" autoplay playsinline></video>
-        <canvas id="output" class="output" width="1280" height="720"></canvas>
+        <div class="wrap">
+            <video id="webcam" class="webcam" autoplay playsinline></video>
+            <canvas id="output" class="output" width="1280" height="720"></canvas>
+        </div>
     </div>
     <script type="module" src="./app/index.ts"></script>
 </body>
