why all acute angles

--- a/mediapipe/pose/index.html
+++ b/mediapipe/pose/index.html
@@ -39,7 +39,7 @@
         <button id="button">ENABLE WEBCAM</button>
         <div class="wrap">
             <video id="webcam" class="webcam" autoplay playsinline></video>
-            <img id="test" class="test" src="test.png" />
+            <!-- <img id="test" class="test" src="test.png" /> -->
             <canvas id="output" class="output" width="1280" height="720"></canvas>
         </div>
     </div>
