add counter logic

--- a/mediapipe/pose/index.html
+++ b/mediapipe/pose/index.html
@@ -37,6 +37,7 @@
 <body>
     <div id="liveView">
         <button id="button">ENABLE WEBCAM</button>
+        <div id="indicator">Waiting...</div>
         <div class="wrap">
             <video id="webcam" class="webcam" autoplay playsinline></video>
             <!-- <img id="test" class="test" src="test.png" /> -->
