--- a/dice/index.html
+++ b/dice/index.html
@@ -51,14 +51,32 @@
             top: 0;
             left: 0;
         }
+
+        #saveButton {
+            position: absolute;
+            top: 50px;
+            left: 0;
+        }
     </style>
 </head>
 
 <body>
     <div id="canvasZone"><canvas id="renderCanvas"></canvas></div>
     <input type="file" id="uvMapUpload" accept="image/*">
+    <button id="saveButton">Save Canvas as PNG</button>
     <script>
         var canvas = document.getElementById("renderCanvas");
+
+        document.getElementById("saveButton").addEventListener("click", function () {
+            // Get the canvas data as a PNG image
+            var dataURL = canvas.toDataURL("image/png");
+
+            // Create a temporary link element to trigger download
+            var link = document.createElement("a");
+            link.href = dataURL;
+            link.download = "babylon_canvas.png";  // Specify the download filename
+            link.click();
+        });
 
         var startRenderLoop = function (engine, canvas) {
             engine.runRenderLoop(function () {
@@ -73,8 +91,8 @@
         var sceneToRender = null;
         var createDefaultEngine = function () { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true, disableWebGL2Support: false }); };
         var createScene = function () {
-            var scene = new BABYLON.Scene(engine);
-            scene.clearColor = new BABYLON.Color3(.5, .5, .5);
+            var scene = new BABYLON.Scene(engine); 
+            scene.clearColor = new BABYLON.Color4(0, 0, 0, 0); 
 
             // camera
             var camera = new BABYLON.ArcRotateCamera("camera1", -Math.PI / 2, Math.PI / 2.2, 5, new BABYLON.Vector3(0, 0, 0), scene);
@@ -112,6 +130,12 @@
 
                     reader.onload = function (e) {
                         const texture = new BABYLON.Texture(e.target.result, scene, false, true);
+                        texture.uRotation = Math.PI;
+
+                        texture.uOffset = 0;  // Shift the texture horizontally
+                        texture.vOffset = .25;  // Shift the texture vertically
+                        // texture.uScale = 1;     // Scale horizontally
+                        // texture.vScale = 1;     // Scale vertically
                         const material = new BABYLON.StandardMaterial("mat", scene);
                         material.diffuseTexture = texture;
                         // Apply the texture to the mesh material
@@ -129,8 +153,15 @@
                 }
             });
 
+            scene.preventDefaultOnPointerDown = false;
+            scene.preventDefaultOnPointerUp = false;
+
             return scene;
         };
+
+
+
+
         window.initFunction = async function () {
             var asyncEngineCreation = async function () {
                 try {
